# rust-todo

./: .gitignore  README.md
client/: .gitignore  README.md  index.html  package.json  vite.config.ts
client/coverage/: clover.xml  coverage-final.json  index.html
client/coverage/src/: App.tsx.html  index.html  main.tsx.html
client/coverage/src/components/shared/: Footer.tsx.html  index.html
client/coverage/src/features/homepage/api/: index.html  todoApi.ts.html
client/coverage/src/features/homepage/components/: TodoForm.tsx.html  TodoList.tsx.html  index.html
client/coverage/src/pages/: HomePage.tsx.html  index.html
client/coverage/src/utils/: defaults.ts.html  index.html  types.ts.html
client/src/: App.css  App.tsx  index.css  main.tsx
client/src/components/shared/: Footer.css  Footer.tsx
client/src/components/shared/fallback/: ErrorFallback.tsx  GlobalErrorFallback.tsx
client/src/features/homepage/api/: todoApi.ts
client/src/features/homepage/components/: TodoForm.css  TodoForm.tsx  TodoItem.css  TodoItem.tsx  TodoList.css  TodoList.tsx
client/src/pages/: HomePage.css  HomePage.spec.tsx  HomePage.tsx
client/src/tests/: setup.ts
client/src/utils/: config.ts  defaults.ts  types.ts
client/src/utils/helperFunctions/: parsers.ts
server-axum/: Cargo.toml  README.md
server-axum/src/: app.rs  config.rs  main.rs
server-axum/src/models/: todo.rs
server-axum/src/routes/: mod.rs  todo.rs
